seaqt/QtWidgets/gen_qabstractitemview.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QAbstractItemView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QAbstractItemView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QAbstractItemView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QAbstractItemView_override_virtual_dropEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QAbstractItemView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QAbstractItemView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QAbstractItemView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QAbstractItemView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QAbstractItemView_override_virtual_timerEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QAbstractItemView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QAbstractItemView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QAbstractItemView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QAbstractItemView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QAbstractItemView_virtualbase_viewportSizeHint(const void* self);
bool QAbstractItemView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QAbstractItemView_virtualbase_minimumSizeHint(const void* self);
bool QAbstractItemView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QAbstractItemView_virtualbase_sizeHint(const void* self);
bool QAbstractItemView_override_virtual_setupViewport(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QAbstractItemView_override_virtual_paintEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QAbstractItemView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QAbstractItemView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QAbstractItemView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QAbstractItemView_override_virtual_changeEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QAbstractItemView_override_virtual_initStyleOption(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QAbstractItemView_override_virtual_devType(void* self, intptr_t slot);
int QAbstractItemView_virtualbase_devType(const void* self);
bool QAbstractItemView_override_virtual_setVisible(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_setVisible(void* self, bool visible);
bool QAbstractItemView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QAbstractItemView_virtualbase_heightForWidth(const void* self, int param1);
bool QAbstractItemView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QAbstractItemView_virtualbase_hasHeightForWidth(const void* self);
bool QAbstractItemView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QAbstractItemView_virtualbase_paintEngine(const void* self);
bool QAbstractItemView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QAbstractItemView_override_virtual_enterEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QAbstractItemView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_leaveEvent(void* self, QEvent* event);
bool QAbstractItemView_override_virtual_moveEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QAbstractItemView_override_virtual_closeEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QAbstractItemView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QAbstractItemView_override_virtual_actionEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QAbstractItemView_override_virtual_showEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QAbstractItemView_override_virtual_hideEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QAbstractItemView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QAbstractItemView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QAbstractItemView_override_virtual_metric(void* self, intptr_t slot);
int QAbstractItemView_virtualbase_metric(const void* self, int param1);
bool QAbstractItemView_override_virtual_initPainter(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QAbstractItemView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QAbstractItemView_virtualbase_redirected(const void* self, QPoint* offset);
bool QAbstractItemView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QAbstractItemView_virtualbase_sharedPainter(const void* self);
bool QAbstractItemView_override_virtual_childEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_childEvent(void* self, QChildEvent* event);