seaqt/QtWidgets/gen_qabstractitemview.nim

proc fcQAbstractItemView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_mouseDoubleClickEvent".}
proc fQAbstractItemView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_dragEnterEvent".}
proc fcQAbstractItemView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_dragEnterEvent".}
proc fQAbstractItemView_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_dragMoveEvent".}
proc fcQAbstractItemView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_dragMoveEvent".}
proc fQAbstractItemView_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_dragLeaveEvent".}
proc fcQAbstractItemView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_dragLeaveEvent".}
proc fQAbstractItemView_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_dropEvent".}
proc fcQAbstractItemView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_dropEvent".}
proc fQAbstractItemView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_focusInEvent".}
proc fcQAbstractItemView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_focusInEvent".}
proc fQAbstractItemView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_focusOutEvent".}
proc fcQAbstractItemView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_focusOutEvent".}
proc fQAbstractItemView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_keyPressEvent".}
proc fcQAbstractItemView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_keyPressEvent".}
proc fQAbstractItemView_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_resizeEvent".}
proc fcQAbstractItemView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_resizeEvent".}
proc fQAbstractItemView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_timerEvent".}
proc fcQAbstractItemView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_timerEvent".}
proc fQAbstractItemView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_inputMethodEvent".}
proc fcQAbstractItemView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_inputMethodEvent".}
proc fQAbstractItemView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QAbstractItemView_virtualbase_eventFilter".}
proc fcQAbstractItemView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_eventFilter".}
proc fQAbstractItemView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QAbstractItemView_virtualbase_viewportSizeHint".}
proc fcQAbstractItemView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_viewportSizeHint".}
proc fQAbstractItemView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QAbstractItemView_virtualbase_minimumSizeHint".}
proc fcQAbstractItemView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_minimumSizeHint".}
proc fQAbstractItemView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QAbstractItemView_virtualbase_sizeHint".}
proc fcQAbstractItemView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_sizeHint".}
proc fQAbstractItemView_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QAbstractItemView_virtualbase_setupViewport".}
proc fcQAbstractItemView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_setupViewport".}
proc fQAbstractItemView_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QAbstractItemView_virtualbase_paintEvent".}
proc fcQAbstractItemView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_paintEvent".}
proc fQAbstractItemView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QAbstractItemView_virtualbase_wheelEvent".}
proc fcQAbstractItemView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_wheelEvent".}
proc fQAbstractItemView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QAbstractItemView_virtualbase_contextMenuEvent".}
proc fcQAbstractItemView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_contextMenuEvent".}
proc fQAbstractItemView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QAbstractItemView_virtualbase_scrollContentsBy".}
proc fcQAbstractItemView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_scrollContentsBy".}
proc fQAbstractItemView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QAbstractItemView_virtualbase_changeEvent".}
proc fcQAbstractItemView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_changeEvent".}
proc fQAbstractItemView_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QAbstractItemView_virtualbase_initStyleOption".}
proc fcQAbstractItemView_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_initStyleOption".}
proc fQAbstractItemView_virtualbase_devType(self: pointer, ): cint{.importc: "QAbstractItemView_virtualbase_devType".}
proc fcQAbstractItemView_override_virtual_devType(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_devType".}
proc fQAbstractItemView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QAbstractItemView_virtualbase_setVisible".}
proc fcQAbstractItemView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_setVisible".}
proc fQAbstractItemView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QAbstractItemView_virtualbase_heightForWidth".}
proc fcQAbstractItemView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_heightForWidth".}
proc fQAbstractItemView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QAbstractItemView_virtualbase_hasHeightForWidth".}
proc fcQAbstractItemView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_hasHeightForWidth".}
proc fQAbstractItemView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QAbstractItemView_virtualbase_paintEngine".}
proc fcQAbstractItemView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_paintEngine".}
proc fQAbstractItemView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_keyReleaseEvent".}
proc fcQAbstractItemView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_keyReleaseEvent".}
proc fQAbstractItemView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_enterEvent".}
proc fcQAbstractItemView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_enterEvent".}
proc fQAbstractItemView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_leaveEvent".}
proc fcQAbstractItemView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_leaveEvent".}
proc fQAbstractItemView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_moveEvent".}
proc fcQAbstractItemView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_moveEvent".}
proc fQAbstractItemView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_closeEvent".}
proc fcQAbstractItemView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_closeEvent".}
proc fQAbstractItemView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_tabletEvent".}
proc fcQAbstractItemView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_tabletEvent".}
proc fQAbstractItemView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_actionEvent".}
proc fcQAbstractItemView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_actionEvent".}
proc fQAbstractItemView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_showEvent".}
proc fcQAbstractItemView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_showEvent".}
proc fQAbstractItemView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_hideEvent".}
proc fcQAbstractItemView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_hideEvent".}
proc fQAbstractItemView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QAbstractItemView_virtualbase_nativeEvent".}
proc fcQAbstractItemView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_nativeEvent".}
proc fQAbstractItemView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QAbstractItemView_virtualbase_metric".}
proc fcQAbstractItemView_override_virtual_metric(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_metric".}
proc fQAbstractItemView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QAbstractItemView_virtualbase_initPainter".}
proc fcQAbstractItemView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_initPainter".}
proc fQAbstractItemView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QAbstractItemView_virtualbase_redirected".}
proc fcQAbstractItemView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_redirected".}
proc fQAbstractItemView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QAbstractItemView_virtualbase_sharedPainter".}
proc fcQAbstractItemView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_sharedPainter".}
proc fQAbstractItemView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_childEvent".}
proc fcQAbstractItemView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_childEvent".}
